# pobot

./: README.md  pyproject.toml
pobot/: __main__.py  pobot.py
tests/: test_pobot.py
