[tool.poetry]
name = "pobot"
version = "0.1.0"
description = ""
authors = ["Ian S. Pringle <ipringle2@liberty.edu>"]

[tool.poetry.dependencies]
python = "^3.8"
nltk = "^3.5"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
